--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<app-search [(searchModel)]="searchModel"></app-search>
+<app-search></app-search>
 
 <table class="table">
   <thead>
@@ -9,9 +9,9 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let user of users | listFilter: searchModel">
+    <tr *ngFor="let user of users">
       <td>{{ user.id }}</td>
-      <td>{{ user.name }}</td>
+      <td routerLink="/detail/{{user.name}}">{{ user.name }}</td>
       <td>{{ user.email }}</td>
     </tr>
   </tbody>
